# liveplot-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  test.ipynb
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: client.rs  color_scheme.rs  csv_tail.rs  csv_writer.py  custom_color_scheme.rs  custom_colors.rs  custom_trace_colors.rs  decay_old.rs  embedded_tiles.rs  embedded_window.rs  events_advanced.rs  events_simple.rs  features.rs  fft_demo.rs  fixed_data.rs  grpc-server.rs  lots_of_tiny_plots.rs  set_toggle.rs  sine.rs  sine_cosine.rs  sine_cosine_chunks.rs  sine_cosine_delayed_snapshot.rs  thresholds_sine.rs  window_control.rs
examples/web_sine_cosine/: Cargo.toml  README.md  Trunk.toml  index.html
examples/web_sine_cosine/src/: main.rs
proto/: sine.proto
src/: app.rs  color_scheme.rs  config.rs  controllers.rs  data.rs  data_impl.rs  events.rs  export.rs  fft.rs  fft_panel.rs  grpc_client.rs  hotkeys.rs  hotkeys_ui.rs  lib.rs  line_draw.rs  main.rs  main_panel.rs  math.rs  math_ui.rs  menu_ui.rs  mod.rs  panel.rs  persistence.rs  plot.rs  point_selection.rs  scope_multi.rs  sink.rs  thresholds.rs  thresholds_ui.rs  tiles.rs  trace_look.rs  traces_ui.rs  types.rs  ui.rs  undo.rs
src/app/: controllers_embedded.rs  layout.rs  liveplot_app.rs  main_app.rs  mod.rs  panel_helpers.rs  run.rs  update.rs
src/data/: data.rs  export.rs  fft.rs  hotkeys.rs  math.rs  math_old.rs  math_old2.rs  measurement.rs  mod.rs  scope.rs  thresholds.rs  thresholds_old.rs  trace_look.rs  traces.rs  triggers.rs  x_formatter.rs
src/panels/: color_scheme_ui.rs  edge_icons.rs  export_ui.rs  fft_ui.rs  hotkeys_ui.rs  liveplot_ui.rs  math_ui.rs  measurment_ui.rs  mod.rs  panel_trait.rs  scope_settings_ui.rs  scope_ui.rs  thresholds_ui.rs  thresholds_ui_old.rs  trace_look_ui.rs  traces_ui.rs  traces_ui_old.rs  triggers_ui.rs
src/scope_multi/: app.rs  data.rs  export_helpers.rs  fft_panel.rs  hotkeys.rs  hotkeys_ui.rs  math.rs  math_ui.rs  menu_ui.rs  mod.rs  panel.rs  plot.rs  thresholds.rs  thresholds_ui.rs  traces_ui.rs  traceslook_ui.rs  types.rs  ui.rs
src_old/: controllers.rs  export.rs  export_helpers.rs  fft.rs  fft_panel.rs  grpc_client.rs  hotkeys.rs  lib.rs  line_draw.rs  math.rs  point_selection.rs  sink.rs  thresholds.rs  trace_look.rs  traces_ui.rs  types.rs
src_old/scope_multi/: app.rs  math_ui.rs
tests/: color_scheme_ui.rs  events.rs  export.rs  export_ui.rs  hotkeys.rs  math_traces.rs  measurement_ui.rs  panel_trait.rs  scope_data.rs  scope_x_formatter.rs  thresholds_ui.rs  traces.rs  undo.rs  x_formatter.rs
