[package]
name = "liveplot-rs"
version = "0.1.0"
edition = "2021"
autobins = false
license = "Apache-2.0"
homepage = "https://github.com/ulikoehler/liveplot-rs"
repository = "https://github.com/ulikoehler/liveplot-rs"
description = "Realtime interactive plotting library Rust using egui/eframe, with optional gRPC and Parquet export support."

[lib]
name = "liveplot_rs"
path = "src/lib.rs"

[features]
default = []
# Enable building gRPC examples and proto codegen
grpc = [
	"dep:tokio",
	"dep:tonic",
	"dep:prost",
	"dep:prost-types",
	"dep:async-stream",
	"dep:futures-core",
]
# Optional Parquet export support via Apache Arrow
parquet = [
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:parquet",
]

[dependencies]
eframe = "0.32.2"
egui = "0.32.2"
egui_plot = "0.33.0"
chrono = "0.4.41"
rfd = "0.15.4"
image = "0.25.8"
rustfft = "6"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tonic = { version = "0.12", features = ["tls", "transport"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
arrow-array = { version = "52", optional = true }
arrow-schema = { version = "52", optional = true }
parquet = { version = "52", optional = true, features = ["arrow"] }

[build-dependencies]
tonic-build = "0.12"

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["grpc"]

[[example]]
name = "grpc-server"
path = "examples/grpc-server.rs"
required-features = ["grpc"]

[[example]]
name = "sine"
path = "examples/sine.rs"

[[example]]
name = "sine_cosine_delayed_snapshot"
path = "examples/sine_cosine_delayed_snapshot.rs"
required-features = ["parquet"]

[[bin]]
name = "liveplot-rs"
path = "src/main.rs"
required-features = ["grpc"]
