[package]
name = "liveplot"
version = "0.3.0"
edition = "2021"
autobins = false
license = "Apache-2.0"
homepage = "https://github.com/ulikoehler/liveplot-rs"
repository = "https://github.com/ulikoehler/liveplot-rs"
description = "Realtime interactive plotting library using egui/eframe, with optional gRPC and Parquet export support."

[lib]
name = "liveplot"
path = "src/lib.rs"

[features]
default = []
# Opt-in tracing for traces table width debugging (silenced by default)
traces_table_debug = []
# Enable building gRPC examples and proto codegen
grpc = [
	"dep:tokio",
	"dep:tonic",
	"dep:prost",
	"dep:prost-types",
	"dep:async-stream",
	"dep:futures-core",
]
# Optional FFT support (UI & computation)
fft = [
    "dep:rustfft",
]
# Optional Parquet export support via Apache Arrow
parquet = [
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:parquet",
]
# Optional helper for example to query monitor geometry for sizing/positioning
window_control_display_info = [
	"dep:display-info",
]

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_plot = "0.34.0"
chrono = "0.4.41"
rfd = "0.15.4"
image = "0.25.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_table = "0.5"
rustfft = { version = "6", optional = true }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tonic = { version = "0.12", features = ["tls", "transport"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
arrow-array = { version = "52", optional = true }
arrow-schema = { version = "52", optional = true }
parquet = { version = "52", optional = true, features = ["arrow"] }
display-info = { version = "0.5", optional = true }

[build-dependencies]
tonic-build = "0.12"

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["grpc"]

[[example]]
name = "grpc-server"
path = "examples/grpc-server.rs"
required-features = ["grpc"]

[[example]]
name = "sine"
path = "examples/sine.rs"

[[example]]
name = "sine_cosine_delayed_snapshot"
path = "examples/sine_cosine_delayed_snapshot.rs"
required-features = ["parquet"]

[[example]]
name = "window_control"
path = "examples/window_control.rs"
required-features = ["window_control_display_info"]

[[example]]
name = "thresholds_sine"
path = "examples/thresholds_sine.rs"

[[example]]
name = "custom_colors"
path = "examples/custom_colors.rs"

[[example]]
name = "embedded_window"
path = "examples/embedded_window.rs"
