[package]
name = "web_sine_cosine"
version = "0.1.0"
edition = "2021"
description = "Sine/cosine live-plot demo running in the browser via egui/eframe + WebAssembly"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_plot = "0.34"
web-time = "1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
